<resources>
    <string name="app_name">AppDevProject</string>

    <!--    User Registration page.
    prefix this page with:     landPage_
 -->

    <string name="landPage_inspire">Two year of budgeting leads to a life of abundance.</string>

    <string name="landPage_register">Register</string>
    <string name="landPage_login">LogIn</string>

    <string name="landPage_Email">Email? </string>
    <string name="landPage_UserName">UserName? </string>
    <string name="landPage_DateOfBirth">Date Of Birth?</string>
    <string name="landPage_Password">Password?</string>


    <!--landing page
    prefix: home_
-->
    <string name="home_budget"> Take me to budget</string>
    <string name="home_invest">Take me to investments</string>
    <string name="home_edit">Edit profile</string>


    <!--  Edit User Page.
       prefix: edit_
       -->
    <string name="edit_name">Change your name</string>
    <string name="edit_password">Change your password</string>
    <string name="edit_confirm_password">Confirm your new password</string>
    <string name="edit_email">Change your email</string>
    <string name="edit_dob">Change your date of birth</string>
    <string name="edit_save_btn">Im all new</string>


    <!--    budget
        prefix:bud_
    -->

    <string name="bud_heading">BUDGETING</string>
    <string name="bud_subHeading">Completely transform your personal finances in 30 months!</string>
    <string name="bud_taxSide">Tax ?</string>

    <!--  item stuff  -->

    <!--        add new item -->
    <string name="item_Heading">Add a new item</string>
    <string name="item_name">Name of Item</string>
    <string name="item_select_category">what is the category it belongs to?</string>

    <string-array name="item_category">
        <item>Housing</item>
        <item>Utility</item>
        <item>Transportation</item>
        <item>Food</item>
        <item>Entertainment</item>


    </string-array>
    <string name="item_price">Price of Item</string>
    <string name="item_yearlyRenewal">Yearly Renewal Fee</string>
    <string name="item_canel_fee">Cancellation Fee</string>
    <string name="item_term">Period of Contract</string>
    <string name="item_button">Add Item</string>

    <!--        diplay of new item -->

    <!--    income
    prefix: inc_
    -->

    <string name="inc_banner">🤑 Income 🤑 📈</string>
    <string name="inc_labour">I laboured for: $5000 </string>
    <string name="inc_interest">I invested for:$2500 </string>
    <string name="inc_taxBracket">My Govt wants: </string>


    <!--    investment page
    prefix: invest_
-->
    <string name="invest_banner">Investments</string>
    <string name="invest_switch">invest in </string>
    <string name="invest_self">My Self</string>

    <string name="invest_selfWhy">Repaying a credit card is a 25% return on your investment. You\'re at home warren buffet. </string>
    <string name="invest_others">Others </string>

    <string name="invest_sortBy">Sort by</string>

    <string name="invest_bySize">Size</string>
    <string name="invest_byInterest">Interest </string>
    <string name="invest_dividend">Div </string>

    <string name="invest_moneyOut">Monthly Loss: </string>
    <string name="invest_moneyIn">Monthly Gain: </string>

    <string name="invest_repayOver">extra payment</string>


    <string name="invest_repayMin">min repayment:  </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    investment debt fragment
    prefix: invest_debt_frag
-->

    <string name="invest_debt_frag_heading">New Debt</string>
    <string name="invest_bond_heading">New Bond</string>

    <string name="invest_debt_frag_amount">Amount borrowed</string>
    <string name="invest_debt_frag_interest">interest rate</string>
    <string name="invest_debt_frag_compounds">compounds per year</string>
    <string name="invest_debt_frag_term">How many months?</string>
    <string name="invest_debt_frag_button">Add new debt</string>


    <!--
    invest_frag_stock
    : 
-->
    <string name="invest_frag_stock_heading">Stocks </string>
    <string name="invest_frag_stock_ticker">Ticker of the stock</string>
    <string name="invest_frag_stock_number">Quantity of stock</string>
    <string name="invest_frag_stock_btn">Save</string>


<!--    invest edit
    invest_edit_
-->
    <string name="invest_edit_heading">Edit </string>
    <string name="invest_edit_name">Name</string>
    <string name="invest_edit_amountBorrwed">Amount Borrowed</string>
    <string name="invest_edit_interestRate">Interest Rate</string>
    <string name="invest_edit_compoundsPerYear">Compounds</string>
    <string name="invest_edit_month">Term In Month</string>




<!--
    Sum Adapter
    sum_adapter_
-->


    <string name="sum_adapter_TotalInvested">Total Invested.</string>
    <string name="sum_adapter_avgYearlyInterest">Avg Yearly %</string>
    <string name="sum_adapter_monhtlyPayOut">Monthly Payout!</string>



</resources>