<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Investment.Fragments.Invest_fragmentDebt">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/invest_debt_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:text="@string/invest_debt_frag_heading"
            android:textSize="@dimen/reg_log"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/invest_debt_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="35dp"
            android:text="@string/invest_debt_frag_button"
            app:layout_constraintEnd_toEndOf="@+id/invest_debt_getTimeInMonths"
            app:layout_constraintTop_toBottomOf="@+id/invest_debt_getTimeInMonths" />

        <EditText
            android:id="@+id/invest_debt_getAmountBorrowed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:ems="10"
            android:hint="@string/invest_debt_frag_amount"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/invest_debt_heading" />

        <EditText
            android:id="@+id/invest_debt_getInterestRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:hint="@string/invest_debt_frag_interest"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/invest_debt_getAmountBorrowed"
            app:layout_constraintTop_toBottomOf="@+id/invest_debt_getAmountBorrowed" />

        <EditText
            android:id="@+id/invest_debt_getCompoundsPerYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="@string/invest_debt_frag_compounds"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/invest_debt_getInterestRate"
            app:layout_constraintTop_toBottomOf="@+id/invest_debt_getInterestRate" />

        <EditText
            android:id="@+id/invest_debt_getTimeInMonths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="1dp"
            android:ems="10"
            android:hint="@string/invest_debt_frag_term"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/invest_debt_getCompoundsPerYear"
            app:layout_constraintTop_toBottomOf="@+id/invest_debt_getCompoundsPerYear" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>