<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/addItemHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/item_Heading"
        android:textSize="@dimen/reg_log"
        app:layout_constraintBottom_toTopOf="@+id/item_getName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/item_getName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/item_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/item_getPrice"
        app:layout_constraintStart_toStartOf="@+id/addItemHeader"
        app:layout_constraintTop_toBottomOf="@+id/addItemHeader" />

    <Spinner
        android:id="@+id/item_getCategory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:entries="@array/item_category"
        app:layout_constraintBottom_toTopOf="@+id/item_btn_addNew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_getCancelFee" />

    <EditText
        android:id="@+id/item_getPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/item_price"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/item_getContract"
        app:layout_constraintStart_toStartOf="@+id/item_getName"
        app:layout_constraintTop_toBottomOf="@+id/item_getName" />

    <EditText
        android:id="@+id/item_getYearlyFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/item_yearlyRenewal"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/item_getCancelFee"
        app:layout_constraintStart_toStartOf="@+id/item_getContract"
        app:layout_constraintTop_toBottomOf="@+id/item_getContract" />

    <EditText
        android:id="@+id/item_getCancelFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/item_canel_fee"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/item_getCategory"
        app:layout_constraintStart_toStartOf="@+id/item_getYearlyFee"
        app:layout_constraintTop_toBottomOf="@+id/item_getYearlyFee" />

    <Button
        android:id="@+id/item_btn_addNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="63dp"
        android:text="@string/item_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_getCategory" />

    <EditText
        android:id="@+id/item_getContract"
        android:layout_width="214dp"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/item_term"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/item_getYearlyFee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_getPrice" />


</androidx.constraintlayout.widget.ConstraintLayout>