<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9DDF4"
    tools:context=".Tax.Tax_Page">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="58dp"
        android:text="@string/inc_banner"
        android:textSize="@dimen/banners"
        app:layout_constraintBottom_toTopOf="@+id/inc_labourRecycle"
        app:layout_constraintStart_toStartOf="@+id/inc_labour"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inc_labourRecycle"
        android:layout_width="375dp"
        android:layout_height="152dp"
        android:layout_marginBottom="31dp"
        app:layout_constraintBottom_toTopOf="@+id/inc_invest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/inc_labour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="81dp"
        android:layout_marginBottom="380dp"
        android:text="@string/inc_labour"
        android:textSize="@dimen/subheadings"
        app:layout_constraintBottom_toTopOf="@+id/inc_govWants"
        app:layout_constraintStart_toStartOf="@+id/inc_labourRecycle"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inc_investRecycle"
        android:layout_width="395dp"
        android:layout_height="0dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toTopOf="@+id/inc_govWants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inc_invest" />

    <TextView
        android:id="@+id/inc_invest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inc_interest"
        android:textSize="@dimen/subheadings"
        app:layout_constraintBottom_toTopOf="@+id/inc_investRecycle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inc_labourRecycle" />

    <TextView
        android:id="@+id/inc_govWants"
        android:layout_width="397dp"
        android:layout_height="0dp"
        android:layout_marginBottom="113dp"
        android:text="@string/inc_taxBracket"
        android:textSize="@dimen/subheadings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inc_labour" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/inc_fab"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginBottom="34dp"
        android:src="@drawable/baseline_attach_money_24"
        app:backgroundTint="#82B1FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inc_govWants" />

    <!--    <TextView-->
    <!--        android:id="@+id/inc_showBrackets"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->

    <!--        android:text="\n$0 |-&#45;&#45;&#45;&#45;[30k]-&#45;&#45;&#45;&#45;&#45;&#45;[60k]-&#45;&#45;&#45;&#45;&#45;&#45;| 90k-->
    <!--            \n$0 |&#45;&#45;&#45;&#45;[tax eat]| tax  22.3k-->
    <!--            \n$0 |&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;[67k]| 67k left.-->

    <!--"-->
    <!--        tools:layout_editor_absoluteX="84dp"-->
    <!--        tools:layout_editor_absoluteY="474dp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>